force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>ssot__AnnualRevenue__c</fullName>
    <label>Annual Revenue</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Annual Revenue</masterLabel>
        <refAttrDeveloperName>AnnualRevenue</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>