force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__ContactAddressId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContactAddressId__c</fullName>
    <label>Contact Address</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Contact Address</masterLabel>
        <refAttrDeveloperName>ContactAddressId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>