force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__ConvertedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvertedDate__c</fullName>
    <label>Converted Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Converted Date</masterLabel>
        <refAttrDeveloperName>ConvertedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>