force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__ConvertedDt__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvertedDt__c</fullName>
    <label>Converted Dt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Converted Dt</masterLabel>
        <refAttrDeveloperName>ConvertedDt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>