force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__ConvertedToAccountContactId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvertedToAccountContactId__c</fullName>
    <label>Converted To AccountContact</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Converted To AccountContact</masterLabel>
        <refAttrDeveloperName>ConvertedToAccountContactId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>