force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__ConvertedToAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvertedToAccountId__c</fullName>
    <label>Converted To Account</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Converted To Account</masterLabel>
        <refAttrDeveloperName>ConvertedToAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>