force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__ConvertedToOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvertedToOpportunityId__c</fullName>
    <label>Converted To Opportunity</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Converted To Opportunity</masterLabel>
        <refAttrDeveloperName>ConvertedToOpportunityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>