force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__EmailBouncedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmailBouncedDate__c</fullName>
    <label>EmailBouncedDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>EmailBouncedDate</masterLabel>
        <refAttrDeveloperName>EmailBouncedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>