force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__ExpressedInterestText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpressedInterestText__c</fullName>
    <label>Expressed Interest</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Expressed Interest</masterLabel>
        <refAttrDeveloperName>ExpressedInterestText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>