force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__FaxContactPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FaxContactPhoneId__c</fullName>
    <label>Fax Contact Phone</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Fax Contact Phone</masterLabel>
        <refAttrDeveloperName>FaxContactPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>