force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__GeoCodeAccuracy__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeoCodeAccuracy__c</fullName>
    <label>Geo Code Accuracy</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Geo Code Accuracy</masterLabel>
        <refAttrDeveloperName>GeoCodeAccuracy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>