force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__GeoCodeLatitude__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeoCodeLatitude__c</fullName>
    <label>Geo Code Latitude</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Geo Code Latitude</masterLabel>
        <refAttrDeveloperName>GeoCodeLatitude</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>