force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__IsConverted__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsConverted__c</fullName>
    <label>Is Converted</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Is Converted</masterLabel>
        <refAttrDeveloperName>IsConverted</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>