force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__LeadRating__c.field-meta.xml
<CustomField>
    <fullName>ssot__LeadRating__c</fullName>
    <label>Lead Rating</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Lead Rating</masterLabel>
        <refAttrDeveloperName>LeadRating</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>