force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__LeadScore__c.field-meta.xml
<CustomField>
    <fullName>ssot__LeadScore__c</fullName>
    <label>Lead Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Lead Score</masterLabel>
        <refAttrDeveloperName>LeadScore</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>