force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__LeadStatusId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LeadStatusId__c</fullName>
    <label>Lead Status</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Lead Status</masterLabel>
        <refAttrDeveloperName>LeadStatusId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>