force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__MobileContactPhoneId__c.field-meta.xml
<CustomField>
    <fullName>ssot__MobileContactPhoneId__c</fullName>
    <label>Mobile Contact Phone</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Mobile Contact Phone</masterLabel>
        <refAttrDeveloperName>MobileContactPhoneId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>