force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__PartyRoleId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PartyRoleId__c</fullName>
    <label>Lead Party Role</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Lead Party Role</masterLabel>
        <refAttrDeveloperName>PartyRoleId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>