force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__PotentialValueAmt__c.field-meta.xml
<CustomField>
    <fullName>ssot__PotentialValueAmt__c</fullName>
    <label>Potential Value</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Potential Value</masterLabel>
        <refAttrDeveloperName>PotentialValueAmt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>