force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__ReferredByUserId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferredByUserId__c</fullName>
    <label>Referred By User</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Referred By User</masterLabel>
        <refAttrDeveloperName>ReferredByUserId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>