force-app/main/default/objects/ssot__Lead__dlm/fields/ssot__StreetName__c.field-meta.xml
<CustomField>
    <fullName>ssot__StreetName__c</fullName>
    <label>Street Name</label>
    <length>25</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <masterLabel>Street Name</masterLabel>
        <refAttrDeveloperName>StreetName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>